# rag-security-workshop

./: .env.example  .gitignore  README.md  app.py  generate_cvs.py  mal_cv_template.txt  pyproject.toml  rag.py  streamlit_app.py  txt_to_pdf.py
.devcontainer/: devcontainer.json
